RESOLVED FIXED115823
Assert at compile time that we don't pass Objective-C object pointers to adoptCF
https://bugs.webkit.org/show_bug.cgi?id=115823
Summary Assert at compile time that we don't pass Objective-C object pointers to adoptCF
Anders Carlsson
Reported 2013-05-08 13:54:23 PDT
Assert at compile time that we don't pass Objective-C object pointers to adoptCF
Attachments
Patch (6.24 KB, patch)
2013-05-08 13:57 PDT, Anders Carlsson
ggaren: review+
Anders Carlsson
Comment 1 2013-05-08 13:57:20 PDT
Geoffrey Garen
Comment 2 2013-05-08 13:58:41 PDT
Comment on attachment 201104 [details] Patch r=me
Benjamin Poulain
Comment 3 2013-05-08 14:09:17 PDT
Great idea!
Anders Carlsson
Comment 4 2013-05-08 15:01:45 PDT
Note You need to log in before you can comment on or make changes to this bug.