Assert at compile time that we don't pass Objective-C object pointers to adoptCF https://bugs.webkit.org/show_bug.cgi?id=115823

Reviewed by Geoffrey Garen.

Source/WebCore:

* platform/graphics/ca/mac/TileController.mm:
(WebCore::TileController::TileController):
Use adoptNS for CALayer.

Source/WebKit2:

Fix adoptNS/adoptCF mismatches. For the adopt(leakRef()) case we'd ideally want a static_pointer_cast overload for RetainPtr,
but this will do for now.

* Shared/mac/ArgumentCodersMac.mm:
(CoreIPC::decode):

Source/WTF:

static_assert in adoptCF that the object passed in is not an Objective-C object.
* wtf/RetainPtr.h:

Canonical link: https://commits.webkit.org/134229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149768 268f45cc-cd09-0410-ab3c-d52691b4dbfc